--- a/style.css
+++ b/style.css
@@ -148,3 +148,114 @@ header {
 .nav-link:hover {
   color: var(--secondary-font-color);
 }
+
+
+
+
+
+
+
+
+
+.hero {
+  width: 100%;
+  height: 100vh;
+  background: url('img/hero.jpg') center no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.sub-headline {
+  font-size: 8.5rem;
+  color: var(--secondary-font-color);
+  font-weight: 100;
+  line-height: 0.9;
+  letter-spacing: 2px;
+}
+
+.first-letter {
+  text-transform: uppercase;
+  font-size: 10.3rem;
+}
+
+.headline {
+  color: #ffffff;
+  font-size: 3.7rem;
+  text-transform: uppercase;
+  font-weight: 900;
+  letter-spacing: 0.5rem;
+  margin-right: -0.5rem;
+}
+
+.line {
+  max-width: 8.4rem;
+  height: 0.25rem;
+  background-color: #ffffff;
+  position: relative;
+  width: 100%;
+}
+
+.separator {
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
+.line-right::before,
+.line-left::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  border: 0.6rem solid transparent;
+}
+
+.line-right::before {
+  border-right-color: #ffffff;
+  right: 0;
+}
+
+.line-left::before {
+  border-left-color: #ffffff;
+  left: 0;
+}
+
+.asterisk {
+  font-size: 1.2rem;
+  color: var(--secondary-font-color);
+  margin: 0 1.6rem;
+}
+
+.headline-description h5 {
+  color: #ffffff;
+  font-size: 1.4rem;
+  font-weight: 200;
+  text-transform: uppercase;
+  margin-bottom: 1.2rem;
+  letter-spacing: 3px;
+  margin-right: -3px;
+}
+
+.btn {
+  display: inline-block;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-right: -2px;
+}
+
+.cta-btn {
+  font-size: 1.1rem;
+  background-color: #ffffff;
+  padding: 0.9rem 1.8rem;
+  color: var(--body-font-color);
+  border-radius: .4rem;
+  transition: background-color .7s;
+}
+
+.cta-btn:hover,
+.cta-btn:focus {
+  color: #ffffff;
+  background-color: var(--secondary-font-color);
+}
